--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Node modules
 /node_modules/
+node_modules
 
 # Build outputs
 /dist/
 /build/
+dist
+dist-ssr
 
 # Vite cache
 /.vite/
@@ -12,21 +15,33 @@
 *.tsbuildinfo
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
 # Environment files
 .env
 .env.local
 .env.*.local
+*.local
 
 # IDE files
 .vscode/
+.vscode/*
+!.vscode/extensions.json
 .idea/
+.idea
 *.sublime-workspace
 *.sublime-project
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # OS files
 .DS_Store
